# streamlytics

./: .gitignore  LICENSE  README.md  todo.md
api/: env.example  main.py  pyproject.toml
api/config/: db.py
api/routers/: movies.py  series.py  statistics.py
api/services/: statistics_service.py
backend/: requirements.txt  t.txt  verif_json.py
backend/airflow/dags/: etl_netflix_dag.py  etl_tmdb.py
backend/api/: main.py  requirements.txt
backend/api/config/: db.py
backend/api/database/: country_avg_ratings_movies_latest.json  country_avg_ratings_series_latest.json  country_movies_distribution_latest.json  country_series_distribution_latest.json  genres_avg_ratings_movies_latest.json  genres_avg_ratings_series_latest.json  genres_movies_distribution_latest.json  genres_series_distribution_latest.json  yearly_counts_movies_latest.json  yearly_counts_series_latest.json
backend/api/routers/: movies.py  series.py  statistics.py
backend/api/routes/: movies.py  series.py
backend/stats/: analytics.ipynb  eda.py  main.py  stats.py
backend/tmdb_data/: netflix_movies.json  netflix_series.json
etl/: env.example  pyproject.toml  verif_json.py
etl/airflow/dags/: etl_netflix_dag.py
etl/airflow/dags/netflix/: config.py  extractors.py  loaders.py
etl/stats/: eda.py  main.py  stats.py
etl/stats/config/: config.py
etl/stats/utils/: save_data.py
etl/tmdb_data/: netflix_movies.json  netflix_series.json
frontend/: package-lock.json  package.json  tailwind.config.ts
old_frontend/: package-lock.json  package.json  tailwind.config.ts
(+37 files in other folders)
