[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for serving Netflix catalogue statistics and media data"
authors = [{ name = "Joseph A." }]
license = { text = "MIT" }
keywords = ["netflix", "fastapi", "api", "statistics", "supabase"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "databases>=0.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
